--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 				<nav> <!--menu de navigation-->
 					<ul id="menu"> <!--liste à puces-->
 						<li><a href="index.html">Accueil</a></li>
-						<li><a href="page/Acteurs.html">Acteurs</a></li><!--list item avec lien-->
-						<li><a href="page/Synopsis.html">Synopsis</a></li>
-						<li><a href="page/Fiche Technique.html">Fiche Technique</a></li>
-						<li><a href="page/Structure d'un Épisode.html">Structure Épisode</a></li>
+						<li><a href="page/acteurs.html">Acteurs</a></li><!--list item avec lien-->
+						<li><a href="page/synopsis.html">Synopsis</a></li>
+						<li><a href="page/fiche technique.html">Fiche Technique</a></li>
+						<li><a href="page/structure d'un épisode.html">Structure Épisode</a></li>
 						
 					</ul>		
 				</nav>
