--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			<footer><!--pied de page-->
 				<ul>
                     <li><a href="mailto:abdelkadert@csdmedu.ca"> Contact</a></li>
-					<li><a href="page/Plan du site.html">Plan du site</a></li><!--list item avec lien-->
+					<li><a href="page/plan du site.html">Plan du site</a></li><!--list item avec lien-->
 					<li><a href="page/faq.html">FAQ</a></li>
 					<li><a href="page/sites d'interêts.html">Sites d'intérêts</a></li>
 					<li><a href="page/à propos.html">À Propos</a></li>
