--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
 			</header>
 
 			<main><!-- contenu principal de la page-->
-				<!--<p>Criminal minds (Esprits Criminels) est une série télévisée américaine regroupant 15 fascinantes saisons. Vous suivrez tout au long du
-				show, le travail quotidien de sept (voir plus selon la saison) agents du FBI et ce à quoi le monde est cruellement confronté</p>-->
+				<h1>Criminal Minds</h1>
 				<p>"Einstein a dit un jour: <br>L'imagination est plus importante que la connaissance, car la connaissance est limitée, tandis que l’imagination
 				englobe le monde entier."</p>
 				<p>- Criminal Minds E01-S01 </p>
