--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <li><a href="mailto:abdelkadert@csdmedu.ca"> Contact</a></li>
 					<li><a href="page/plan.html">Plan du site</a></li><!--list item avec lien-->
 					<li><a href="page/faq.html">FAQ</a></li>
-					<li><a href="page/interêts.html">Sites d'intérêts</a></li>
+					<li><a href="page/interets.html">Sites d'intérêts</a></li>
 					<li><a href="page/apropos.html">À Propos</a></li>
 				</ul>
 				
